<resources>
    <string name="app_name">Check Apartment 1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="etE">Email</string>
    <string name="etP">Contraseña</string>
    <string name="boton1">Ingresar</string>
    <string name="xtv_proyecto">Proyecto</string>
    <string name="xtv_unidad">Unidad</string>
    <string name="xtv_direccion">Direccion</string>
    <string name="xiv_url">Url</string>
    <string name="imagen">imagen</string>
    <string name="button_second">Regresar</string>
    <string name="xtv_luces">Luces</string>
    <string name="xtv_bano">Baño</string>
    <string name="xtv_dormitorio">Dormitorio</string>
    <string name="xtv_cocina">Cocina</string>
    <string name="xtv_normal">Normal</string>
    <string name="xtv_regular">Regular</string>
    <string name="xtv_mala">Mala</string>
</resources>