<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/xtv_proyecto"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:text="@string/xtv_proyecto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/xtv_unidad"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:text="@string/xtv_unidad"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xtv_proyecto" />

    <TextView
        android:id="@+id/xtv_direccion"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:text="@string/xtv_direccion"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xtv_unidad" />

    <ImageView
        android:id="@+id/xiv_url"
        android:layout_width="136dp"
        android:layout_height="85dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />


</androidx.constraintlayout.widget.ConstraintLayout>